--- a/Source/MyVanity/MyVanity.Web/Web.config
+++ b/Source/MyVanity/MyVanity.Web/Web.config
@@ -9,14 +9,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <system.diagnostics>
-      <trace>
-          <listeners>
-              <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-                  name="AzureDiagnostics">
-                  <filter type="" />
-              </add>
-          </listeners>
-      </trace>
+    <trace>
+      <listeners>
+        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
+        </add>
+      </listeners>
+    </trace>
   </system.diagnostics>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=MyVanity;Integrated Security=True" providerName="System.Data.SqlClient" />
